Changes after validating + added error page

--- a/menu.html
+++ b/menu.html
@@ -18,7 +18,7 @@
         <h1>Cheech's Pizza</h1>
         <div class="navigation">
             <div class="home">
-                <a>Home</a>
+                <a href="error.html">Home</a>
             </div>
             <div class="menu">
                 <a href="menu.html">~ Menu ~</a>
@@ -27,7 +27,7 @@
                 <a href="order.html">Order Online</a>
             </div>
             <div class="location">
-                <a>Our Location</a>
+                <a href="error.html">Our Location</a>
             </div>
         </div>
         
