--- a/order.html
+++ b/order.html
@@ -18,7 +18,7 @@
         <h1>Cheech's Pizza</h1>
         <div class="navigation">
             <div class="home">
-                <a>Home</a>
+                <a href="error.html">Home</a>
             </div>
             <div class="menu">
                 <a href="menu.html">Menu</a>
@@ -27,7 +27,7 @@
                 <a href="order.html">~ Order Online ~</a>
             </div>
             <div class="location">
-                <a>Our Location</a>
+                <a href="error.html">Our Location</a>
             </div>
         </div>
     </header>
@@ -89,9 +89,9 @@
                 <div>
                     <h1>Social Media</h1>
                     <div class="icons">
-                        <div><a href="https:/facebook.com"><i class="fa-brands fa-square-facebook"></i></a></div>
-                        <div><a href="https:/instagram.com"><i class="fa-brands fa-square-instagram"></i></a></div>
-                        <div><a href="https:/twitter.com"><i class="fa-brands fa-square-twitter"></i></a></div>
+                        <div><a href="https://facebook.com"><i class="fa-brands fa-square-facebook"></i></a></div>
+                        <div><a href="https://instagram.com"><i class="fa-brands fa-square-instagram"></i></a></div>
+                        <div><a href="https://twitter.com"><i class="fa-brands fa-square-twitter"></i></a></div>
                     </div>
                 </div>
             </div>
